fix: Adjust z-index of background container

--- a/style/style.css
+++ b/style/style.css
@@ -1180,5 +1180,5 @@ h3.my-profession {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1;
+    z-index: 1;
 }
